# LocalMusicPlayer

./: .gitignore  index.html  package-lock.json  package.json  test-cases.md  tsconfig.json
changelog/: 2026-04-19.md
src/: App.tsx  DesktopLyric.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FolderView.tsx  LyricPanel.tsx  LyricsImmersion.tsx  Player.tsx  Playlist.tsx  Sidebar.tsx  TitleBar.tsx
src/constants/: index.ts
src/hooks/: use-audio.ts  use-lyric.ts
src/services/: audio-service.ts  file-service.ts
src/stores/: nav-store.ts  player-store.ts  playlist-store.ts
src/styles/: app.css  desktop-lyric.css  global.css
src/types/: index.ts
